--- a/stylemedia.css
+++ b/stylemedia.css
@@ -31,6 +31,7 @@
     background-image: linear-gradient(0deg, rgb(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5)), url(bannercelular.jpg);    
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
 }
 
 
@@ -38,8 +39,9 @@
     color: white;
     font-size: 50px;
     display: flex;
-   justify-content: center;
-   align-items: flex-start;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%; 
 }
     #c{
     display: flex;
@@ -66,16 +68,20 @@
     }
     .contenedorsection2{
         flex-direction: column;
+        width: 100%;
     }
     .grilla{
         display: flex;
-        flex-direction: column
+        flex-direction: column;
+        width: 100%;
     }
     #s4{
         display: flex;
-        flex-direction: column-reverse
+        flex-direction: column-reverse;
+        width: 100%;
     }
     #s4 ul li{
         text-align: start;
+        width: 100%;
     }
 }  
