--- a/stylemedia.css
+++ b/stylemedia.css
@@ -1,7 +1,11 @@
 @media screen and (max-width:580px) {
+    body{
+        width: 100%;
+    }
     header{
         justify-content: center;
         flex-direction: column;
+        width: 100%;
 
 
     }
@@ -82,6 +86,15 @@
     }
     #s4 ul li{
         text-align: start;
+        width: 100%;
+    }
+    #s2{
+        width: 100%;
+    }
+    #s3{
+        width: 100%;
+    }
+    footer{
         width: 100%;
     }
 }  
