--- a/galeria.css
+++ b/galeria.css
@@ -1,4 +1,3 @@
-
 *::after,
 *::before,
 *{
@@ -28,33 +27,37 @@ img{
     max-width: 100%;
 }
 
-
 header{
     display: flex;
     justify-content: space-between;
     padding: 30px 0 40px 0;
-    background-color: aquamarine;
+    background-color: #1c31a5;
 }
-
 
 h1{
     padding-left: 20px;
+    color: white;
+}
+
+h2{
+    padding-left: 20px;
+    color: white;
+    padding-top: 10px;
 }
 
 .container-icon{
     position: relative;
+    margin-right: 40px; /* Ajusta este valor para separar más la bolsa del margen derecho */
 }
 
 .count-products{
     position: absolute;
     top: 55%;
-    right: 0;
-
+    right: -10px; /* Ajusta este valor para alinear el número */
     background-color: #000;
     color: #fff;
     width: 25px;
     height: 25px;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,14 +71,12 @@ h1{
 .container-cart-products{
     position: absolute;
     top: 50px;
-    right: 0;
-
+    right: -10px; /* Ajusta este valor para alinear el carrito */
     background-color: #fff;
     width: 400px;
     z-index: 1;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
     border-radius: 10px;
-    
 }
 
 .cart-product{
@@ -83,9 +84,7 @@ h1{
     align-items: center;
     justify-content: space-between;
     padding: 30px;
-
     border-bottom: 1px solid rgba(0, 0, 0, 0.20);
-
 }
 
 .info-cart-product{
@@ -141,10 +140,6 @@ h1{
     display: none;
 }
 
-
-
-
-
 .container-items{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -167,7 +162,6 @@ h1{
     transition: all .5s;
     margin: 0 auto; /* Agrega esta línea para centrar las imágenes */
 }
-
 
 .item figure{
     overflow: hidden;
@@ -199,19 +193,52 @@ h1{
     cursor: pointer;
 }
 
+/*######################################################################*/
+/*######################################################################*/
+/*######################################################################*/
+#vendedores{
+    background-color:blanchedalmond;
+}
+
+.info-product-2{
+    padding: 15px 30px;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+.container-items-2{
+    display: grid;
+    grid-template-columns: repeat(3,);
+    gap: 20px;
+}
+.item-2{
+    border-radius: 10px;
+    background-color: red;
+}
+
+.info-product-2 button{
+    border: none;
+    background: none;
+    background-color: #000;
+    color: #fff;
+    padding: 15px 10px;
+    cursor: pointer;
+}
+
+.h1-vendedores{
+    text-align: center;
+    background-color: aqua;
+    font-size: 30px;
+}
+
 /* MEDIA QUERIES*/
 
-
 @media screen and (max-width: 580px){
-
-.container-items {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    .container-items {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
         gap: 20px;
     }
-
-
-
-
-
 }
