--- a/galeria.css
+++ b/galeria.css
@@ -233,6 +233,22 @@ h2{
     font-size: 30px;
 }
 
+.btn-buy {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007acc;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 14px;
+    transition: background-color 0.3s;
+}
+
+.btn-buy:hover {
+    background-color: #005f99;
+}
 /* MEDIA QUERIES*/
 
 @media screen and (max-width: 580px){
